# probar

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  new_source.md  schema_change.md
.github/workflows/: canary.yml  ci.yml  release.yml
docs/: ENGINEERING_GUIDE.md  PROJECT_PLAN.md  changelog.md  index.md  install.md  playground.md  quickstart.md  requirements.txt
docs/guide/: auto.md  eastmoney.md  tdx.md  ths.md
docs/reference/: capabilities.md  errors.md  schema.md
probar/: __init__.py  auto.py
probar/core/: __init__.py  cache.py  calendar.py  capabilities.py  errors.py  http.py  models.py  rate_limit.py  symbols.py
probar/playground/: __init__.py  __main__.py  app.py  index.html
probar/providers/: __init__.py  base.py
probar/providers/eastmoney/: __init__.py  client.py  endpoints.py  parsers.py
probar/providers/tdx/: PROTOCOL.md  __init__.py  (+6 more)
scripts/: canary.py
tests/: conftest.py  test_auto.py  test_capabilities.py  test_dc_sector_fflow.py  test_eastmoney_more.py  test_eastmoney_optimize.py  test_eastmoney_parsers.py  test_http.py  test_namespaces.py  test_playground.py  test_rate_limit.py  test_securities.py  test_symbols.py  test_tdx_block.py  test_tdx_codec.py  test_tdx_finance_info.py  test_tdx_index.py  test_tdx_kline.py  test_tdx_quote.py  test_tdx_securities.py  test_tdx_ticks.py  test_tdx_ticks_hist.py  test_tdx_xdxr.py
tests/fixtures/: dc_sector_fflow.json  eastmoney_fflow.json  eastmoney_financials.json  eastmoney_kline.json  eastmoney_lhb.json  eastmoney_quotes_batch.json  eastmoney_securities.json  eastmoney_trends.json  tdx_finance_raw.json  tdx_index_raw.json  tdx_kline_raw.json  tdx_quotes.json  tdx_quotes_raw.json  tdx_securities_raw.json  tdx_ticks_hist_raw.json  tdx_ticks_raw.json  tdx_xdxr_raw.json
(+2 files in other folders)
